profil select transloco added

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,6 +30,21 @@
   "LOWSTOCK": "Low Stock",
   "OUTOFSTOCK": "Out of Stock",
   "All":"All",
+  "1":"1",
+  "2":"2",
+  "3":"3",
+  "4":"4",
+  "5":"5",
+  "0-100$":"0-100$",
+  "101-200$":"101-200$",
+  "201-300$":"201-300$",
+  "301-500$":"301-500$",
+  "501-1000$":"501-1000$",
+  "1000$ +":"1001-100000$",
+  "Male":"Male",
+  "Female":"Female",
+  "Another":"Another",
+
 
 
   "loginForm": {
