--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -30,7 +30,20 @@
   "LOWSTOCK": "Tükenmek Üzere",
   "OUTOFSTOCK": "Stokta Yok",
   "All":"Tümü",
-
+  "1":"1",
+  "2":"2",
+  "3":"3",
+  "4":"4",
+  "5":"5",
+  "0-100$":"0-100$",
+  "101-200$":"101-200$",
+  "201-300$":"201-300$",
+  "301-500$":"301-500$",
+  "501-1000$":"501-1000$",
+  "1000$ +":"1001-100000$",
+  "Male":"Erkek",
+  "Female":"Kadın",
+  "Another":"Diğer",
 
   "loginForm": {
     "header": "Giriş",
